--- a/web/css/styleml.css
+++ b/web/css/styleml.css
@@ -77,8 +77,7 @@ input[type=submit]:hover span:after {
 }
 
 
-/*Tableau*/
-
+/*Tableau panier*/
 table {
     width: 100%;
     font-family: 'PlayfairDisplay-Regular', Arial;
@@ -88,8 +87,6 @@ th {
     text-align: left;
     font-family: 'PlayfairDisplay-Regular', Arial;
 }
-
-
 
 td {
     height: 80px;
@@ -102,13 +99,12 @@ td {
     border-bottom: 1px solid #ddd;
 }
 
-
 .insideTable:hover {
     background-color: #f5f5f5;
 }
 
-/*Confirmation Ajout Caddy*/
 
+/*Confirmation ajout caddy*/
 .hop {
     font-family:'LearningCurveProRegular', Arial;
     font-size: 2em;
@@ -150,7 +146,8 @@ td {
     text-align: center;
 }
 
-/*Boutons Panier*/
+
+/*Boutons panier*/
 #containerButtons{
     width: 100%;
     height: 50px;
@@ -166,4 +163,10 @@ td {
 #btn_right {
     position: absolute;
     right: 30px;
+}
+
+/*Image panier vide*/
+#panierVide {
+    display: block;
+    margin: auto;
 }
