--- a/web/css/styleml.css
+++ b/web/css/styleml.css
@@ -170,3 +170,36 @@ td {
     display: block;
     margin: auto;
 }
+
+
+/*TEST : Feuille style header*/
+header{
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+}
+
+h1{
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    font-size: 5em;
+}
+#titrePrincipal {
+    display: flex;
+}
+
+
+/*Navigation*/
+nav ul {
+    list-style-type: none;
+    display: flex;
+}
+
+nav li {
+    margin-right: 15px;
+}
+
+nav a {
+    font-size: 1.3em;
+    padding-bottom: 3px;
+    text-decoration: none;
+}
