--- a/web/css/styleml.css
+++ b/web/css/styleml.css
@@ -78,26 +78,24 @@ input[type=submit]:hover span:after {
 
 
 /*Tableau panier*/
-table {
+#cartContent {
     width: 100%;
     font-family: 'PlayfairDisplay-Regular', Arial;
 }
 
-th {
+#cartContent th {
     text-align: left;
     font-family: 'PlayfairDisplay-Regular', Arial;
 }
 
-td {
+#cartContent td {
     height: 80px;
     vertical-align: central;
     font-family: 'PlayfairDisplay-Regular', Arial;
     font-size: 0.85em;
-}
-
-td {
     border-bottom: 1px solid #ddd;
 }
+
 
 .insideTable:hover {
     background-color: #f5f5f5;
@@ -173,25 +171,40 @@ td {
 
 
 /*TEST : Feuille style header*/
-header{
+.containerTop {
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-content: flex-start;
+    align-items: center;
 }
 
-h1{
+#titrePrincipal h1 {
     font-family: 'PlayfairDisplay-Regular', Arial;
-    font-size: 5em;
+    font-size: 2.3em;
+    align-self: top;
 }
-#titrePrincipal {
-    display: flex;
+
+.element:nth-child(1){
+    flex:1;
 }
+
+.element:nth-child(2){
+    flex:3;
+}
+
+#loupe {
+    height: 15px;
+    width: 15px;
+}
+
 
 
 /*Navigation*/
 nav ul {
     list-style-type: none;
     display: flex;
+    align-tems: baseline;
 }
 
 nav li {
@@ -203,3 +216,38 @@ nav a {
     padding-bottom: 3px;
     text-decoration: none;
 }
+
+input[type=search] {
+    border-radius: 6px;
+    height: 35px;
+}
+
+select {
+   
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    width: 135px;
+}
+
+
+
+/*LoginFrame
+#loginFrame
+{
+    width: 25%;
+    border: none;
+    
+}
+
+#loginFrame th{
+    height: 10px;
+}
+
+.fieldLogin {
+    font-size: xx-small;
+    width: 40px;
+}
+
+.inputLogin {
+    width: 70px;
+    border-spacing: 10px;
+}*/
