--- a/web/css/styleseb.css
+++ b/web/css/styleseb.css
@@ -3,11 +3,20 @@
 }
 
 #eventInfo{
-    vertical-align: top;
+    display: flex;
+}
+
+#catalog{
+    margin-left: 150px;
+}
+
+.conteneur{
+    display: flex;
 }
 
 h1{
-    font-family: 'PlayfairDisplay-Regular', Arial;   
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    background-color: #CEF6E3;
 }
 
 h2{
@@ -30,7 +39,7 @@ img{
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 13px;
+    font-size: 20px;
     border-radius: 8px;
 
     /*    width:200px;
