--- a/web/css/styleml.css
+++ b/web/css/styleml.css
@@ -79,8 +79,12 @@ input[type=submit]:hover span:after {
 
 /*Tableau panier*/
 #cartContent {
-    width: 100%;
+    width: 80%;
     font-family: 'PlayfairDisplay-Regular', Arial;
+    position: relative;
+    left: 15%;
+    margin-right: 0px;
+    
 }
 
 #cartContent th {
@@ -155,12 +159,12 @@ input[type=submit]:hover span:after {
 
 #btn_left {
     position: absolute;
-    left: 30px;
+    left: 210px;
 }
 
 #btn_right {
     position: absolute;
-    right: 30px;
+    right: 70px;
 }
 
 /*Image panier vide*/
@@ -168,6 +172,14 @@ input[type=submit]:hover span:after {
     display: block;
     margin: auto;
 }
+
+#achat {
+    display: block;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 
 
 /*Header*/
@@ -232,11 +244,14 @@ select {
 }
 /*Sidebar*/
 .menuGroup{
+    overflow:auto;
+    z-index: 2;
     list-style-type: none;
     margin: 0;
     padding: 0;
-    position: fixed;
-    height: 85%;
+    position: absolute;
+    left: 0;
+    height: 65%;
     overflow: auto;
 }
 
@@ -297,21 +312,86 @@ select {
 
 
 /*Footer*/
+footer {
+    position : absolute;
+    bottom : 0px;
+    height : 60px;
+    z-index: 1;
+    width: 100%;
+  }
+  
 .containerFooter {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
+    z-index: 1;
 }
 
 #bottomList {
     list-style-type: none;
-
-    align-tems: baseline;
+    //align-tems: baseline;
 }
 
 #bottomList li {
     flex-direction: column;
+}
+
+.address {
+    padding-right: 40px;
+}
+
+h6 {
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    font-size: small;
+    line-height: 0;
+}
+
+#Sb {
+    font-family:'LearningCurveProRegular', Arial;
+    font-size: 2.5em;
+    font-weight: bold;
+}
+.sbBottom:link{
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    font-size: small;
+    color: black;
+    text-decoration: none;
+}
+
+.sbBottom:visited{
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    font-size: small;
+    color: black;
+    text-decoration: none;
+}
+
+.sbBottom:active{
+    font-family: 'PlayfairDisplay-Regular', Arial;
+    font-size: small;
+    color: black;
+    text-decoration: none;
+}
+
+
+
+/*Structure de la page*/
+html {
+    height: 100%;
+}
+
+header {
+    height: 20%;
+}
+
+footer {
+    height: 20%;
+}
+
+
+//Login
+#login{
+    margin-left: 150px;
 }
 
 
