--- a/web/css/styleml.css
+++ b/web/css/styleml.css
@@ -251,7 +251,7 @@ select {
     padding: 0;
     position: absolute;
     left: 0;
-    height: 65%;
+    //height: 65%;
     overflow: auto;
 }
 
@@ -313,7 +313,7 @@ select {
 
 /*Footer*/
 footer {
-    position : absolute;
+    position : relative;
     bottom : 0px;
     height : 60px;
     z-index: 1;
